test/with9.slq
def main(){
	y:=0:ğ”¹;
	with{
		y:=H(y); // error
	}do{
		if measure(H(0)){
			return 2; // error
		}
		x:=0;
	}
	assert(measure(y)=0);
	return x;
}
